--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="it.manzolo.gestionespesefamiliari"
     android:versionCode="1"
-    android:versionName="1.2.0.0">
-
-<uses-sdk
-        android:minSdkVersion="10"
-        android:targetSdkVersion="22.0.1" />
+    android:versionName="1.2.0.1">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -24,33 +22,30 @@
             android:theme="@android:style/Theme.Black.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.UpdateAppActivity"
             android:label="@string/title_activity_login"
-            android:theme="@style/Theme.AppCompat.Light"></activity>
-
+            android:theme="@style/Theme.AppCompat.Light" />
         <activity
             android:name=".ui.LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.Light">
             <intent-filter>
-            <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.InserimentoSpesaActivity"
             android:label="@string/title_activity_login"
             android:theme="@style/Theme.AppCompat.Light">
             <intent-filter>
-            <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.UltimiMovimentiActivity"
             android:label="@string/app_name"
@@ -60,8 +55,7 @@
             </intent-filter>
         </activity>
 
-
-        <receiver android:name="it.manzolo.gestionespesefamiliari.service.NetworkChangeReceiver">
+        <receiver android:name=".service.NetworkChangeReceiver">
             <intent-filter>
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
@@ -69,6 +63,9 @@
 
         <service android:name=".service.DownloadService" />
 
+        <activity
+            android:name=".ui.SettingsActivity"
+            android:label="@string/title_activity_settings"></activity>
     </application>
 
 </manifest>
