--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
     }
 }
 apply plugin: 'com.android.application'
@@ -12,14 +12,18 @@ repositories {
     mavenCentral()
 }
 
+static def releaseTime() {
+    return new Date().format("yyyy-MM-dd", TimeZone.getTimeZone("UTC"))
+}
+
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.1"
     useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
-        minSdkVersion 11
-        targetSdkVersion 24
+        minSdkVersion 14
+        targetSdkVersion 27
     }
     signingConfigs {
         myConfig {
@@ -33,11 +37,16 @@ android {
         release {
             signingConfig signingConfigs.myConfig
         }
-        applicationVariants.all { variant ->
-            variant.outputs.each { output ->
-                def apk = output.outputFile;
-                def newName = "gestionespesefamiliari" + ".apk";
-                output.outputFile = new File(apk.parentFile, newName);
+        android.applicationVariants.all { variant ->
+            variant.outputs.all { output ->
+                def outputFile = output.outputFile
+                if (outputFile != null && outputFile.name.endsWith('.apk')) {
+                    def fileName = outputFile.name.replace("app",
+                            "${defaultConfig.applicationId}_${defaultConfig.versionName}_${releaseTime()}")
+                    outputFileName = fileName
+
+                }
+
             }
         }
 
@@ -45,6 +54,5 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.android.support:appcompat-v7:27.1.0'
 }
